sort.pancake.BubblePancake.scala.error
Compilation error:
BubblePancake:5: error: illegal start of simple pattern
    var : j = i
        ^BubblePancake:6: error: '=' expected but ';' found.
    while(getPancakeRadius(j)>getPancakeRadius(j+1)){
^